--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "test": "./node_modules/.bin/jest"
+    "test": "jest"
   },
   "engines": {
     "node": "8.*",
